      (Aaron Bentley)

  IMPROVEMENTS:

    * When making a large readv() request over ``bzr+ssh``, break up the
      request into more manageable chunks. Because the RPC is not yet able
      to stream, this helps keep us from buffering too much information at
      once. (John Arbash Meinel)

  BUG FIXES:

  DOCUMENTATION:

  API CHANGES:

    * Transport implementations must provide copy_tree_to_transport.  A default
      implementation is provided for Transport subclasses.

  TESTING:

    * ``bzr selftest`` now fails if no doctests are found in a module
      that's expected to have them.  (Martin Pool)
      
    * Doctests now only report the first failure.  (Martin Pool)

  INTERNALS:


bzr 1.9 2008-11-07
------------------

This release of Bazaar adds a new repository format, ``1.9``, with smaller
and more efficient index files.  This format can be specified when
creating a new repository, or used to losslessly upgrade an existing
repository.  bzr 1.9 also speeds most operations over the smart server
protocol, makes annotate faster, and uses less memory when making
checkouts or pulling large amounts of data.

  BUG FIXES:

   * Fix "invalid property value 'branch-nick' for None" regression with
     branches bound to svn branches.  (Martin Pool, #293440)

   * Fix SSL/https on Python2.6.  (Vincent Ladeuil, #293054)

   * ``SFTPTransport.readv()`` had a bug when requests were out-of-order.
     This only triggers some-of-the-time on Knit format repositories.
     (John Arbash Meinel, #293746)


bzr 1.9rc1 2008-10-31
---------------------

  NEW FEATURES:

    * New Branch hook ``transform_fallback_location`` allows a function to
      be called when looking up the stacked source. (Michael Hudson)

    * New repository formats ``1.9`` and ``1.9-rich-root``. These have all
      the functionality of ``1.6``, but use the new btree indexes.
      These indexes are both smaller and faster for access to historical
      information.  (John Arbash Meinel)
